# 3081W_PradoEditor

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  EditorManager.cpp  EditorManager.h  LICENSE.md  PradoEditor.cpp  PradoEditor.qrc  PradoEditor.ui  README.md  artwork.cpp  artwork.h  debug.cpp  image_cache.cpp  image_cache.h  image_scroll_gallery.cpp  image_scroll_gallery.h  levenshtein.cpp  levenshtein.h  main.cpp  prado_editor.cpp  prado_museum_app.ui  prado_theme.qss  prado_theme_enhanced.qss  prado_theme_updated.qss  preprocess_data.py  smallerpaintings.csv  testArtworkManager.cpp
images/: README.md  README.txt  clean_smallerpaintings.csv  csv_fixer.py  smallerpaintings.csv
include/: EditorManager.h  ImageCache.h  README.md  README.txt  artwork.h  debug.h  image_cache.h  image_scroll_gallery.h  managers.h  prado_editor.h
src/: EditorManager.cpp  ImageCache.cpp  README.md  README.txt  artwork.cpp  debug.cpp  image_cache.cpp  image_scroll_gallery.cpp  main.cpp  main_old.cpp  managers.cpp  prado_editor.cpp
tests/: CMakeLists.txt  README.md  README.txt  testing.cpp
